V2.0 Agregamos el uso de Mapper para la comunicacion con los DTO, se modificaron las 3 entidades (Rol, Usuario y Empresa), se elimino metodos innecesarios, y reforzo la seguridad